# zodiacal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
benches/: attitude_hint.rs
docs/: bundle-build-lessons.md  bundle-format.md  d9-bundle-validation.md  uniform-coverage.md
docs/deployment/: README.md  ground.md  server.md  space.md
examples/: build_gaia_index.rs  solve_test_cases.rs
paper/: .gitignore  FIGURES.md  make_figures.py  zodiacal.bib  zodiacal.tex
paper/bundle_figures/: README.md  plot_failures_mollweide.py  plot_quads_mollweide.py  plot_radec_residuals.py  plot_radii_v2.py
plans/: 01-sparse-load.md  02-healpix-format.md  03-live-index.md  04-pointing-sources.md  05-realtime-solver.md  README.md
scripts/: _debugutil.py  analyze_failures.py  analyze_index.py  fetch_test_cases.sh  generate_test_cases.py  generate_test_cases.sh  plot_attitude_bench.py  plot_failures.py  probe_detection.py  render_miss_grid.py  render_solver_trace.py
src/: cli_build_from_shards.rs  extraction.rs  fitting.rs  healpix.rs  kdtree.rs  lib.rs  main.rs  pointing.rs  quads.rs  realtime.rs  solver.rs  tweak.rs  verify.rs
src/bundle/: accessor.rs  gaia_shard.rs  layout.rs  manifest.rs  mod.rs  quad_shard.rs  reader.rs  tidy.rs
src/geom/: mod.rs  proper_motion.rs  sip.rs  sphere.rs  tan.rs
src/index/: build_manifest.rs  builder.rs  catalog.rs  cell_builder.rs  gaia.rs  live.rs  mod.rs  multiband_cell_builder.rs  quads.rs  source.rs  store.rs
src/refinement/: apparent.rs  mod.rs  refine.rs  sidecar.rs  tests.rs  types.rs
test_cases/: 0100.json  0101.json  0102.json  0103.json  0104.json  0105.json  0106.json  0107.json  0108.json  0109.json  0110.json  0111.json  0112.json  0113.json  0114.json  0115.json  0116.json  0117.json  0118.json  0119.json  0120.json  0121.json  0122.json  0123.json  0124.json  0125.json  0126.json  0127.json  0128.json  0129.json  0130.json  0131.json  0132.json  0133.json  0134.json  0135.json  0136.json  0137.json  0138.json  0139.json  (+860 more)
tests/: bundle_solve_e2e.rs
zodiacal-tools/: Cargo.toml
zodiacal-tools/src/: bench_bundle.rs  bench_indexes.rs  bench_triage.rs  build_from_excerpt.rs  build_from_excerpt_series.rs  build_from_shards.rs  main.rs
