[package]
name = "zodiacal"
version = "0.2.0"
edition = "2024"
description = "A blind astrometry plate-solving library"
license = "Apache-2.0"
repository = "https://github.com/meawoppl/zodiacal"
keywords = ["astrometry", "plate-solving", "astronomy", "wcs"]
categories = ["science"]
exclude = ["external/", "PLAN.md", "benches/", "scripts/", "scratch/"]

[features]
default = ["fits"]
fits = ["dep:fitsio-pure"]
image-processing = ["dep:ndarray"]
cli = ["dep:clap", "dep:glob", "dep:image", "dep:indicatif", "image-processing"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"], optional = true }
fitsio-pure = { version = "0.9.2", features = ["compat"], optional = true }
glob = { version = "0.3.3", optional = true }
image = { version = "0.25.9", optional = true }
indicatif = { version = "0.18.3", optional = true }
ndarray = { version = "0.17.2", optional = true }
cdshealpix = "0.9.1"
dirs-next = "2"
flate2 = "1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
starfield = "0.9.1"

[[bin]]
name = "zodiacal"
required-features = ["cli"]
