[package]
name = "zodiacal"
version = "0.4.1"
edition = "2024"
description = "A blind astrometry plate-solving library"
license = "Apache-2.0"
repository = "https://github.com/OrbitalCommons/zodiacal"
keywords = ["astrometry", "plate-solving", "astronomy", "wcs"]
categories = ["science"]
exclude = ["external/", "PLAN.md", "benches/", "scripts/", "scratch/", "test_cases/"]

[features]
default = ["fits"]
fits = ["dep:fitsio-pure"]
image-processing = ["dep:ndarray"]
cli = ["dep:clap", "dep:glob", "dep:image", "dep:indicatif", "image-processing"]
# `gaia-shards` enables the `build-from-shards` CLI subcommand, which reads
# a directory of Gaia DR3 `.csv.gz` shards and emits a `.zdcl` index plus
# matching `.zdcl.gaia` refinement sidecar in one pass.
#
# This pulls in `starfield-gaia` from a sibling repo via a path dep
# (the crate is not yet published to crates.io), so it's gated behind a
# non-default feature to keep the public crate buildable from crates.io.
gaia-shards = ["dep:starfield-gaia"]

[dependencies]
clap = { version = "4.5.57", features = ["derive"], optional = true }
fitsio-pure = { version = "0.9.2", features = ["compat"], optional = true }
glob = { version = "0.3.3", optional = true }
image = { version = "0.25.9", optional = true }
indicatif = { version = "0.18.3", optional = true }
ndarray = { version = "0.17.2", optional = true }
cdshealpix = "0.9.1"
memmap2 = "0.9"
nalgebra = "0.32"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
starfield = "0.11"
starfield-gaia = { path = "../starfield-datasources/crates/gaia", optional = true }

[[bin]]
name = "zodiacal"
required-features = ["cli"]

[[bench]]
name = "attitude_hint"
harness = false
