[package]
name = "zodiacal-tools"
version = "0.1.0"
edition = "2024"
description = "Operational tools for building and inspecting zodiacal indexes (.zdcl) and refinement sidecars (.zdcl.gaia)"
license = "Apache-2.0"
repository = "https://github.com/OrbitalCommons/zodiacal"
keywords = ["astrometry", "gaia", "starfield", "tooling"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "zodiacal-tools"
path = "src/main.rs"

[dependencies]
zodiacal = { path = "..", version = "0.4" }
# Pinned to the commit that ships LazyLoadingCatalog::entries_in_cell
# + cell_count (PR #48), the cell-baked reader the build-from-excerpt
# subcommand drives. Also pulls in the resumable excerpt writer (#44)
# and the GaiaCatalog/LazyLoadingCatalog/MemoryResidentCatalog split
# (#45). Pin explicitly so reproducibility doesn't depend on `cargo
# update` timing.
starfield-gaia = { git = "https://github.com/OrbitalCommons/starfield-datasources", rev = "058146b" }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
